Fixed Jsf and 1 upadte on rest
Fixed the views and controllers for course registration, assign grade, assign porofessor